--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -310,17 +310,17 @@
                         <viewControllerLayoutGuide type="bottom" id="vCG-C8-pFP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VW6-yX-ke9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="112" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2eS-X6-kLa">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="defaultCell" id="gGh-Dg-ZPZ" customClass="CBTableViewCell" customModule="CherrydaleBuds" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="112"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gGh-Dg-ZPZ" id="8Jf-QY-WxY">
+                                        <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gGh-Dg-ZPZ" id="8Jf-QY-WxY">
                                             <rect key="frame" x="0.0" y="0.0" width="336" height="111.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
@@ -358,6 +358,7 @@
                             <constraint firstItem="2eS-X6-kLa" firstAttribute="top" secondItem="VW6-yX-ke9" secondAttribute="top" id="n3H-uK-jbv"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="2eS-X6-kLa" id="sVs-V9-nQK"/>
