--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -239,10 +239,10 @@
                             <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image14" translatesAutoresizingMaskIntoConstraints="NO" id="GNW-z8-Gle">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kYd-Xi-sIb">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kYd-Xi-sIb">
                                 <rect key="frame" x="0.0" y="141" width="375" height="385"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Right- you need to replace CBViewController with CBInfoViewController entirely" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dG-kt-L4V">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Right- you need to replace CBViewController with CBInfoViewController entirely" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9dG-kt-L4V">
                                         <rect key="frame" x="0.0" y="99" width="375" height="120"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="120" id="fob-z2-vGt"/>
@@ -251,7 +251,7 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hint:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvz-iA-30b">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hint:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvz-iA-30b">
                                         <rect key="frame" x="0.0" y="267" width="375" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="rmo-gv-AID"/>
@@ -260,7 +260,7 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seen on some random St." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Os9-1B-pJk">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seen on some random St." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Os9-1B-pJk">
                                         <rect key="frame" x="0.0" y="314" width="375" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Uca-Vy-bGY"/>
@@ -269,7 +269,7 @@
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wC5-uZ-NZR">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wC5-uZ-NZR">
                                         <rect key="frame" x="310" y="15" width="50" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="fCN-WU-nGp"/>
@@ -279,6 +279,9 @@
                                         <state key="normal" title="ⓧ">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="closeButtonPressed:" destination="Xjg-Kv-HRt" eventType="touchUpInside" id="Rwl-CJ-9bl"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="0.69999999999999996" colorSpace="calibratedWhite"/>
@@ -303,6 +306,9 @@
                                 <state key="normal" title="ⓘ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="infoButtonPressed:" destination="Xjg-Kv-HRt" eventType="touchUpInside" id="PdO-3n-yQl"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.6954195205479452" colorSpace="calibratedRGB"/>
@@ -321,8 +327,10 @@
                     </view>
                     <connections>
                         <outlet property="closeButton" destination="wC5-uZ-NZR" id="cNG-ig-3hj"/>
+                        <outlet property="hintLabel" destination="vvz-iA-30b" id="b6u-oS-uR1"/>
                         <outlet property="infoButton" destination="0o2-01-tDs" id="H3L-Xb-d2u"/>
                         <outlet property="subtitleLabel" destination="Os9-1B-pJk" id="241-1Q-4AU"/>
+                        <outlet property="textBackgroundView" destination="kYd-Xi-sIb" id="Xqj-Hl-Sld"/>
                         <outlet property="titleLabel" destination="9dG-kt-L4V" id="mRi-Tw-kxl"/>
                     </connections>
                 </viewController>
@@ -350,7 +358,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="112"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gGh-Dg-ZPZ" id="8Jf-QY-WxY">
-                                            <rect key="frame" x="0.0" y="0.0" width="336" height="112"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="336" height="111.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vlS-gM-Ch2">
