--- a/CherrydaleBuds/Base.lproj/LaunchScreen.storyboard
+++ b/CherrydaleBuds/Base.lproj/LaunchScreen.storyboard
@@ -22,11 +22,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image28" translatesAutoresizingMaskIntoConstraints="NO" id="Lio-PV-4It">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Flower and Blue Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="Lio-PV-4It">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CdC-bF-yrV">
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="CdC-bF-yrV">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
                                     <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(( Shake It ))" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="54" translatesAutoresizingMaskIntoConstraints="NO" id="MUR-9i-Sca">
@@ -67,6 +67,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Image28" width="3024" height="4032"/>
+        <image name="Flower and Blue Launch Screen" width="3024" height="4032"/>
     </resources>
 </document>
