--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -226,9 +226,13 @@
                                 </constraints>
                             </view>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-01-tDs">
-                                <rect key="frame" x="328" y="69" width="36" height="54"/>
+                                <rect key="frame" x="299" y="20" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="X4w-8F-eF3"/>
+                                    <constraint firstAttribute="width" constant="60" id="wfU-wz-EtN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
                                 <state key="normal" title="ⓘ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -239,16 +243,16 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.6954195205479452" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="0o2-01-tDs" firstAttribute="leading" secondItem="GNW-z8-Gle" secondAttribute="trailing" constant="-76" id="8RZ-uJ-IFH"/>
                             <constraint firstItem="xdo-15-pMy" firstAttribute="top" secondItem="kYd-Xi-sIb" secondAttribute="bottom" constant="141" id="K3v-k9-mnY"/>
                             <constraint firstItem="GNW-z8-Gle" firstAttribute="top" secondItem="k1Q-LT-nib" secondAttribute="top" id="OTw-mc-R4c"/>
                             <constraint firstAttribute="trailing" secondItem="GNW-z8-Gle" secondAttribute="trailing" id="Ybr-Q8-7Ij"/>
                             <constraint firstItem="kYd-Xi-sIb" firstAttribute="leading" secondItem="GNW-z8-Gle" secondAttribute="leading" id="ZZU-cm-vzY"/>
-                            <constraint firstItem="0o2-01-tDs" firstAttribute="trailing" secondItem="k1Q-LT-nib" secondAttribute="trailingMargin" constant="5" id="jkz-lG-Wbz"/>
                             <constraint firstItem="GNW-z8-Gle" firstAttribute="leading" secondItem="k1Q-LT-nib" secondAttribute="leading" id="kKn-n1-mnU"/>
                             <constraint firstItem="kYd-Xi-sIb" firstAttribute="trailing" secondItem="GNW-z8-Gle" secondAttribute="trailing" id="oKR-31-jMw"/>
+                            <constraint firstItem="GNW-z8-Gle" firstAttribute="top" secondItem="0o2-01-tDs" secondAttribute="bottom" constant="-80" id="oaB-th-akT"/>
                             <constraint firstItem="kYd-Xi-sIb" firstAttribute="centerY" secondItem="k1Q-LT-nib" secondAttribute="centerY" id="pc2-Ts-BL6"/>
                             <constraint firstItem="xdo-15-pMy" firstAttribute="top" secondItem="GNW-z8-Gle" secondAttribute="bottom" id="xdD-eP-MZQ"/>
-                            <constraint firstItem="0o2-01-tDs" firstAttribute="top" secondItem="6lm-Zt-Nd7" secondAttribute="bottom" constant="5" id="zXj-fx-994"/>
                         </constraints>
                     </view>
                     <connections>
@@ -265,20 +269,20 @@
             </objects>
             <point key="canvasLocation" x="-1124" y="8.5457271364317844"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Scavenger Hunt List-->
         <scene sceneID="gSV-HZ-zir">
             <objects>
-                <viewController storyboardIdentifier="CBTableViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="aTB-SA-LWY" customClass="CBTableViewController" customModule="CherrydaleBuds" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CBTableViewController" title="Scavenger Hunt List" useStoryboardIdentifierAsRestorationIdentifier="YES" id="aTB-SA-LWY" customClass="CBTableViewController" customModule="CherrydaleBuds" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5b2-V0-scn"/>
                         <viewControllerLayoutGuide type="bottom" id="vCG-C8-pFP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VW6-yX-ke9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="112" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2eS-X6-kLa">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="defaultCell" editingAccessoryType="checkmark" rowHeight="112" id="gGh-Dg-ZPZ" customClass="CBTableViewCell" customModule="CherrydaleBuds" customModuleProvider="target">
@@ -351,6 +355,7 @@
                             <constraint firstItem="2eS-X6-kLa" firstAttribute="top" secondItem="VW6-yX-ke9" secondAttribute="top" id="n3H-uK-jbv"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="2eS-X6-kLa" id="sVs-V9-nQK"/>
@@ -358,19 +363,19 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7yo-V3-mh1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1954.4000000000001" y="8.5457271364317844"/>
+            <point key="canvasLocation" x="-1908" y="9"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="l87-fc-HJb">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zpB-uF-2sW" sceneMemberID="viewController">
+                <navigationController id="zpB-uF-2sW" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <toolbarItems/>
                     <value key="contentSizeForViewInPopover" type="size" width="375" height="667"/>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="375" height="667"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="Tl8-wk-2C4">
+                    <navigationBar key="navigationBar" contentMode="scaleAspectFill" id="Tl8-wk-2C4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
