Fixed Info Button location and increased the build number to 7.

--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -226,7 +226,7 @@
                                 </constraints>
                             </view>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-01-tDs">
-                                <rect key="frame" x="299" y="20" width="60" height="60"/>
+                                <rect key="frame" x="299" y="64" width="60" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="X4w-8F-eF3"/>
@@ -243,14 +243,14 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.6954195205479452" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="0o2-01-tDs" firstAttribute="leading" secondItem="GNW-z8-Gle" secondAttribute="trailing" constant="-76" id="8RZ-uJ-IFH"/>
+                            <constraint firstItem="0o2-01-tDs" firstAttribute="trailing" secondItem="k1Q-LT-nib" secondAttribute="trailingMargin" id="2q3-cB-SZp"/>
                             <constraint firstItem="xdo-15-pMy" firstAttribute="top" secondItem="kYd-Xi-sIb" secondAttribute="bottom" constant="141" id="K3v-k9-mnY"/>
                             <constraint firstItem="GNW-z8-Gle" firstAttribute="top" secondItem="k1Q-LT-nib" secondAttribute="top" id="OTw-mc-R4c"/>
                             <constraint firstAttribute="trailing" secondItem="GNW-z8-Gle" secondAttribute="trailing" id="Ybr-Q8-7Ij"/>
                             <constraint firstItem="kYd-Xi-sIb" firstAttribute="leading" secondItem="GNW-z8-Gle" secondAttribute="leading" id="ZZU-cm-vzY"/>
                             <constraint firstItem="GNW-z8-Gle" firstAttribute="leading" secondItem="k1Q-LT-nib" secondAttribute="leading" id="kKn-n1-mnU"/>
                             <constraint firstItem="kYd-Xi-sIb" firstAttribute="trailing" secondItem="GNW-z8-Gle" secondAttribute="trailing" id="oKR-31-jMw"/>
-                            <constraint firstItem="GNW-z8-Gle" firstAttribute="top" secondItem="0o2-01-tDs" secondAttribute="bottom" constant="-80" id="oaB-th-akT"/>
+                            <constraint firstItem="0o2-01-tDs" firstAttribute="top" secondItem="6lm-Zt-Nd7" secondAttribute="bottom" id="oLu-RO-dmR"/>
                             <constraint firstItem="kYd-Xi-sIb" firstAttribute="centerY" secondItem="k1Q-LT-nib" secondAttribute="centerY" id="pc2-Ts-BL6"/>
                             <constraint firstItem="xdo-15-pMy" firstAttribute="top" secondItem="GNW-z8-Gle" secondAttribute="bottom" id="xdD-eP-MZQ"/>
                         </constraints>
@@ -357,6 +357,8 @@
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                     <connections>
                         <outlet property="tableView" destination="2eS-X6-kLa" id="sVs-V9-nQK"/>
                     </connections>
@@ -372,6 +374,8 @@
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <toolbarItems/>
                     <value key="contentSizeForViewInPopover" type="size" width="375" height="667"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                     <navigationBar key="navigationBar" contentMode="scaleAspectFill" id="Tl8-wk-2C4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
