--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="x8X-h0-Z6a"/>
             </objects>
-            <point key="canvasLocation" x="-282" y="593"/>
+            <point key="canvasLocation" x="-716" y="1201"/>
         </scene>
         <!--Welcome Page View Controller-->
         <scene sceneID="TnC-m1-98u">
@@ -285,11 +285,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="defaultCell" editingAccessoryType="checkmark" rowHeight="112" id="gGh-Dg-ZPZ" customClass="CBTableViewCell" customModule="CherrydaleBuds" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" reuseIdentifier="defaultCell" rowHeight="112" id="gGh-Dg-ZPZ" customClass="CBTableViewCell" customModule="CherrydaleBuds" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="112"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gGh-Dg-ZPZ" id="8Jf-QY-WxY">
-                                            <rect key="frame" x="0.0" y="0.0" width="336" height="111.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="308" height="111.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vlS-gM-Ch2">
@@ -300,7 +300,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zW3-eW-Em8">
-                                                    <rect key="frame" x="92" y="82" width="164" height="22"/>
+                                                    <rect key="frame" x="92" y="82" width="136" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="22" id="Eqs-xU-LnC"/>
                                                     </constraints>
@@ -309,7 +309,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qy9-4G-I6W">
-                                                    <rect key="frame" x="92" y="0.0" width="164" height="70"/>
+                                                    <rect key="frame" x="92" y="0.0" width="136" height="70"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="70" id="iSC-pk-LlI"/>
                                                     </constraints>
@@ -317,14 +317,27 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button hidden="YES" opaque="NO" tag="1001" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48N-au-86q">
+                                                    <rect key="frame" x="0.0" y="0.0" width="84" height="112"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="84" id="TnZ-lz-HbW"/>
+                                                        <constraint firstAttribute="height" constant="112" id="XB6-ed-93m"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="86"/>
+                                                    <state key="normal" title="✔︎">
+                                                        <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="qy9-4G-I6W" secondAttribute="trailing" constant="80" id="5CL-oP-mL3"/>
+                                                <constraint firstItem="48N-au-86q" firstAttribute="top" secondItem="8Jf-QY-WxY" secondAttribute="top" id="9tl-qN-89x"/>
                                                 <constraint firstItem="qy9-4G-I6W" firstAttribute="leading" secondItem="vlS-gM-Ch2" secondAttribute="trailing" constant="8" id="CXK-zb-Ffm"/>
                                                 <constraint firstItem="zW3-eW-Em8" firstAttribute="leading" secondItem="vlS-gM-Ch2" secondAttribute="trailing" constant="8" symbolic="YES" id="E1B-yQ-Zee"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="zW3-eW-Em8" secondAttribute="bottom" constant="-0.5" id="EYX-Mv-BRG"/>
                                                 <constraint firstAttribute="trailing" secondItem="zW3-eW-Em8" secondAttribute="trailing" constant="80" id="Jzy-7g-JV2"/>
                                                 <constraint firstItem="vlS-gM-Ch2" firstAttribute="leading" secondItem="8Jf-QY-WxY" secondAttribute="leading" id="KZB-nH-9uS"/>
+                                                <constraint firstItem="48N-au-86q" firstAttribute="leading" secondItem="8Jf-QY-WxY" secondAttribute="leading" id="QZG-wr-nCj"/>
                                                 <constraint firstItem="qy9-4G-I6W" firstAttribute="leading" secondItem="vlS-gM-Ch2" secondAttribute="trailing" constant="8" symbolic="YES" id="Uky-LF-H6L"/>
                                                 <constraint firstItem="zW3-eW-Em8" firstAttribute="leading" secondItem="vlS-gM-Ch2" secondAttribute="trailing" constant="8" id="eEn-uE-N02"/>
                                                 <constraint firstItem="vlS-gM-Ch2" firstAttribute="top" secondItem="8Jf-QY-WxY" secondAttribute="top" id="xuO-UW-sDc"/>
@@ -365,7 +378,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7yo-V3-mh1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1908" y="9"/>
+            <point key="canvasLocation" x="-1908" y="8.5457271364317844"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="l87-fc-HJb">
