--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -158,7 +158,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image14" translatesAutoresizingMaskIntoConstraints="NO" id="GNW-z8-Gle">
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GNW-z8-Gle" userLabel="infoImageView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <gestureRecognizers/>
                                 <connections>
@@ -259,6 +259,7 @@
                         <outlet property="closeButton" destination="wC5-uZ-NZR" id="QXd-RH-fC6"/>
                         <outlet property="hintLabel" destination="vvz-iA-30b" id="7J7-oy-TYW"/>
                         <outlet property="infoButton" destination="0o2-01-tDs" id="93E-gW-Ji3"/>
+                        <outlet property="infoImageView" destination="GNW-z8-Gle" id="caO-uU-RIb"/>
                         <outlet property="subtitleLabel" destination="Os9-1B-pJk" id="RUC-Li-zmr"/>
                         <outlet property="textBackgroundView" destination="kYd-Xi-sIb" id="7DM-lz-EZa"/>
                         <outlet property="titleLabel" destination="9dG-kt-L4V" id="ihc-eG-i2R"/>
@@ -410,6 +411,5 @@
     <resources>
         <image name="Flower and Blue Launch Screen" width="3024" height="4032"/>
         <image name="Image1" width="3024" height="4032"/>
-        <image name="Image14" width="3024" height="4032"/>
     </resources>
 </document>
