--- a/CherrydaleBuds/Base.lproj/Main.storyboard
+++ b/CherrydaleBuds/Base.lproj/Main.storyboard
@@ -259,6 +259,7 @@
                         <outlet property="closeButton" destination="wC5-uZ-NZR" id="QXd-RH-fC6"/>
                         <outlet property="hintLabel" destination="vvz-iA-30b" id="7J7-oy-TYW"/>
                         <outlet property="infoButton" destination="0o2-01-tDs" id="93E-gW-Ji3"/>
+                        <outlet property="infoImageView" destination="GNW-z8-Gle" id="XOH-J5-dt0"/>
                         <outlet property="subtitleLabel" destination="Os9-1B-pJk" id="RUC-Li-zmr"/>
                         <outlet property="textBackgroundView" destination="kYd-Xi-sIb" id="7DM-lz-EZa"/>
                         <outlet property="titleLabel" destination="9dG-kt-L4V" id="ihc-eG-i2R"/>
